# SentinelScan-Elite-CLI

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
app/: __init__.py  application.py  bootstrap.py  context.py  lifecycle.py
assets/: banner.txt
cli/: app.py  interface.py  messages.py  parser.py  tables.py
config/: default_config.json  sentinelscan.example.yaml  sentinelscan.yaml
core/: __init__.py  constants.py  events.py  exceptions.py  module.py  module_manager.py  plugin.py  plugin_manager.py  resources.py  security.py  validators.py
docs/: ARCHITECTURE.md  CODING_STANDARDS.md  DEVELOPER_GUIDE.md  FUNCTIONAL_AUDIT.md  MASTER_PROMPT.md  MODULE_GUIDE.md  PLUGIN_GUIDE.md  ROADMAP.md  SMART_SCAN_GUIDE.md  TECHNICAL_SPECIFICATION.md  TESTING_GUIDE.md  USER_GUIDE.md
examples/: assets.json  basic_workflow.md
modules/: __init__.py
plugins/: README.md
requirements/: base.txt  dev.txt
scripts/: __init__.py  check_tools.py  install_dependencies.py  setup_report.py  setup_wizard.py  smoke_run.py
services/: __init__.py  audit_service.py  baseline_service.py  cleanup_service.py  config_service.py  history_service.py  log_service.py  project_service.py  report_service.py  scanner_service.py  session_service.py  setup_service.py  smart_scan_service.py  storage.py
templates/: report_markdown.md
tests/: conftest.py  test_baseline.py  test_cleanup.py  test_cli.py  test_config.py  test_core.py  test_errors.py  test_integration.py  test_logger.py  test_modules.py  test_plugins.py  test_projects.py  test_reports.py  test_scanner_modules.py  (+7 more)
(+20 files in other folders)
